Bug 1183037: Ensure that autocomplete popups can be displayed again after being dismissed the first time. r=mconley, a=gchang

--HG--
extra : source : b443899d03b49b3e0af52e9274b287c990798315